--- a/components/v-calendar-day.html
+++ b/components/v-calendar-day.html
@@ -25,7 +25,7 @@
       </div>
       <div v-else class="pb-1 marcacao-time">&nbsp;</div>
       <div v-if="marcacoes.length > 4" class="py-1 footer-extra">
-        Mais {{marcacoes.extras.length}}
+        Mais {{marcacoes.extras.length - 4}}
       </div>
       <div v-else class="py-1 footer-extra">&nbsp;</div>
     </v-card-text>
