--- a/components/v-topbar.html
+++ b/components/v-topbar.html
@@ -1,8 +1,10 @@
-<v-toolbar :clipped-left="$vuetify.breakpoint.lgAndUp" :dark="dark" app fixed>
+<v-toolbar :clipped-left="$vuetify.breakpoint.lgAndUp" :dark="$store.state.darkTheme" app fixed>
   <v-toolbar-title style="width: 300px" class="ml-0 pl-3">
     <v-toolbar-side-icon @click.stop="toggleSidebar">
     </v-toolbar-side-icon>
-    <span class="hidden-sm-and-down">Relógio de ponto</span>
+    <span class="hidden-sm-and-down clickable" @click.stop="$router.push('/')">
+      Ponto
+    </span>
   </v-toolbar-title>
   <!-- <v-text-field flat solo-inverted hide-details prepend-inner-icon="search" label="Procurar" class="hidden-sm-and-down">
   </v-text-field> -->
